azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_directive-6.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parser.finish()
---
Parse {
    node: Root@0..2
      Directive@0..2
        DirectiveToken@0..1 "%"
        DirectiveName@1..2 "D"
    ,
    errors: [],
}
