azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_directive-8.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parser.finish()
---
Parse {
    node: Root@0..5
      Directive@0..5
        DirectiveToken@0..1 "%"
        DirectiveName@1..4 "DIR"
        LineBreak@4..5 "\n"
    ,
    errors: [],
}
