azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_directive.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parser.finish()
---
Parse {
    node: Root@0..0
      Error@0..0 ""
    ,
    errors: [],
}
