azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_tag_directive-13.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..8
      DirectiveToken@0..1 "%"
      DirectiveName@1..4 "TAG"
      InlineSeparator@4..5 " "
      SecondaryTagHandle@5..7 "!!"
      Error@7..8 "!"
    ,
    errors: [],
}
