azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_tag_directive-14.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..10
      Directive@0..10
        DirectiveToken@0..1 "%"
        DirectiveName@1..4 "TAG"
        InlineSeparator@4..5 " "
        PrimaryTagHandle@5..6 "!"
        InlineSeparator@6..7 " "
        TagPrefix@7..10 "foo"
    ,
    errors: [],
}
