azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_tag_directive-15.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..14
      DirectiveToken@0..1 "%"
      DirectiveName@1..4 "TAG"
      InlineSeparator@4..5 " "
      NamedTagHandle@5..11 "!yaml!"
      Error@11..14 "foo"
    ,
    errors: [
        Diagnostic {
            span: 11..14,
            severity: Error,
            message: "expected tag prefix",
        },
    ],
}
