azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_tag_directive-16.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..24
      Directive@0..24
        DirectiveToken@0..1 "%"
        DirectiveName@1..4 "TAG"
        InlineSeparator@4..5 " "
        NamedTagHandle@5..11 "!yaml!"
        InlineSeparator@11..12 " "
        Error@12..24 "ภาษา"
    ,
    errors: [
        Diagnostic {
            span: 12..24,
            severity: Error,
            message: "invalid initial tag prefix character",
        },
    ],
}
